# Watchlist

Watchlist/: CMakeLists.txt  CSV.h  FileNotFoundException.cpp  HTML.h  file.txt  filme1.html  filme2.csv  main.cpp
Watchlist/Test/: CMakeLists.txt  FilmControllerTest.cpp
Watchlist/src/Controller/: FilmController.cpp  FilmController.h
Watchlist/src/UI/: UI.cpp  UI.h
Watchlist/src/ValidClass/: ValidationClass.cpp  ValidationClass.h
Watchlist/src/domain/: Film.cpp  Film.h
Watchlist/src/html/: HTML.cpp
Watchlist/src/repository/: FilmInMemoryRepository.h  FilmRepository.cpp  FilmRepository.h
